# svelte-revolution

./: .dockerignore  .env  .env.example  .env.local  .env.local.example  .env.prod  .env.production  .env.server  .gitignore  CLAUDE.md  Dockerfile  README.ai.md  README.md  README.style.md  bun.lockb  deploy.old.sh  deploy.sh  docker-compose.yml  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
db/: Dockerfile  schema.json
ia_mistral/: README.md  ai_session.py  ai_session2.py  ai_session_2.py  main.py  (+16 more)
ia_server/: .gitignore  Dockerfile  README.md  compose.yml  data.json  go.mod  go.sum  pyproject.toml
ia_server/app/: config.py  evaluator.py  main.py  mistral_client.py  models.py  pb_client.py  state.py  subscriber.py
ia_server/app/capabilities/: censor.py  end_session.py  trigger_nodes.py
ia_server/app/tests/: conftest.py  test_censor.py  test_end_session.py  test_integration.py  test_llm_quality.py  test_trigger_nodes.py
ia_server/cmd/lauchServer/: data.json  launchServer.go
ia_server/pkg/OMWfr/: OMWfr.go  types.go
ia_server/pkg/censorship/: censorship.go  scenario.go  session.go
ia_server/pkg/data_persistence/: data_persistence.go  loader.go
ia_server/pkg/dictionnary/: dictionnary.go
ia_server/pkg/libs/: constants.go  types.go
ia_server/pkg/wiktionnaire/: wiktionnaire.go
ia_server/resources/: scenario.json
ia_server/webservice/: constants.go  isCensored.go  newSession.go  server.go  session.go
ia_server/word2vec/: word2vec.go
(+130 files in other folders)
