[project]
name = "ia-server"
version = "0.1.0"
description = "AI Game Master for Babel Révolution — subscribes to PocketBase and runs scenario AIConfig capabilities"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pocketbase>=0.15.0",
    "mistralai>=2.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
markers = [
    "integration: requires a running PocketBase instance",
    "llm: requires a valid MISTRAL_API_KEY (real LLM calls)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
